fix overlap of videos

--- a/css/filmstrip/_vertical_filmstrip.scss
+++ b/css/filmstrip/_vertical_filmstrip.scss
@@ -67,7 +67,7 @@
                 width: 100%;
                 height: 100%;
                 //nino add padding
-                padding-top: 16px;
+                padding-top: 32px;
                 padding-bottom: 16px;
                 justify-content: center;
             }
